// Copyright 2019 Zeppelin Bend Pty Ltd
// This file is part of cimbend.
// 
// cimbend is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
// 
// cimbend is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
// 
// You should have received a copy of the GNU Affero General Public License
// along with cimbend.  If not, see <https://www.gnu.org/licenses/>.


syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.zepben.protobuf.cim.iec61970.base.meas";
package zepben.cim.iec61970.base.meas;

import "zepben/cim/iec61970/base/meas/MeasurementValue.proto";
import "zepben/cim/iec61970/base/diagramlayout/DiagramObject.proto";

/**
 * A Measurement represents any measured, calculated or non-measured non-calculated quantity. Any piece of equipment may
 * contain Measurements, e.g. a substation may have temperature measurements and door open indications, a transformer may
 * have oil temperature and tank pressure measurements, a bay may contain a number of power flow measurements and a
 * Breaker may contain a switch status measurement.
 * <p>
 * The PSR - Measurement association is intended to capture this use of Measurement and is included in the naming
 * hierarchy based on Network. The naming hierarchy typically has Measurements as leafs,
 * e.g. Substation-VoltageLevel-Bay-Switch-Measurement.
 * <p>
 * Some Measurements represent quantities related to a particular sensor location in the network, e.g. a voltage transformer
 * (PT) at a busbar or a current transformer (CT) at the bar between a breaker and an isolator. The sensing position is not
 * captured in the PSR - Measurement association. Instead it is captured by the Measurement - Terminal association that is
 * used to define the sensing location in the network topology. The location is defined by the connection of the Terminal to
 * ConductingEquipment.
 * <p>
 * If both a Terminal and PSR are associated, and the PSR is of type ConductingEquipment, the associated Terminal should
 * belong to that ConductingEquipment instance.
 * <p>
 * When the sensor location is needed both Measurement-PSR and Measurement-Terminal are used. The Measurement-Terminal
 * association is never used alone.
 */
message Measurement {

    /**
     * Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness
     * is easily achieved by using a UUID,  as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
     * <p>
     * For CIMXML data files in RDF syntax conforming to IEC 61970-552 Edition 1, the mRID is mapped to rdf:ID or rdf:about attributes
     * that identify CIM object elements.
     */
    string mRID = 1;

    /**
     * The name is any free human readable and possibly non unique text naming the object.
     */
    string name = 2;

    /**
     * The values connected to this measurement.
     */
    iec61970.base.meas.MeasurementValue measurementValue = 3;

    /**
     * The diagram objects that are associated with the domain object.
     * <p>
     * The diagram objects are returned in a map sorted by the diagram they live in.
     */
    repeated iec61970.base.diagramlayout.DiagramObject diagramObjects = 16;

}
